--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 <head>
 <title>We the Sea Otters</title>
 </head>
+<body style="background-color: #EDF2FB;">
+
 <body>
 
 <h1>The Few. The Proud. The Sea Otters.</h1>
-<p>This is a paragraph.</p>
- <a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
+<p>Your duty as a keystone species is to protect and serve as a Guardian of the ocean's ecosystem.</p>
+<hr>
+<br>
+ <a href="page1.html">I am ready to do my duty!</a>
+ <br>
+ <br>
  <img src="images/seaotter1.jpg" alt="Sea Otter waving">
+ <p>Good luck and do us proud!</p>
 
 </body>
 </html>
