--- a/page1.html
+++ b/page1.html
@@ -3,12 +3,19 @@
 <head>
 <title>We the Sea Otters</title>
 </head>
+<body style="background-color: #EDF2FB;">
+
 <body>
 
-<h1>Encounter! Engage?</h1>
-<p>This is a paragraph.</p>
- <a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
- <img src="images/seaotter1.jpg" alt="Sea Otter waving">
+<h1>Encounter! Will you engage?</h1>
+<p>What will you do when you see sea urchins around the area?</p>
+<hr>
+<br>
+ <a href="page2.html">Leave them alone.</a>
+ <a href="page3.html">Eat them.</a>
+ <br>
+ <br>
+ <img src="images/purpleurchin1.jpg" alt="Purple urchins" style="width:450px;height:350px;">
 
 </body>
 </html>
