--- a/page2.html
+++ b/page2.html
@@ -3,12 +3,18 @@
 <head>
 <title>We the Sea Otters</title>
 </head>
+<body style="background-color: #EDF2FB;">
+
 <body>
 
 <h1>Incoming! Sea urchin infestation!!!</h1>
-<p>This is a paragraph.</p>
- <a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
- <img src="images/seaotter1.jpg" alt="Sea Otter waving">
+<p>The infestation has become overwhelming. The sea urchins come in waves and eat away at the kelp forest, reducing a part of the ocean's ecosystem.</p>
+<hr>
+<br>
+ <a href="page1.html">Will you try again?</a>
+ <br>
+ <br>
+ <img src="images/purpleurchin2.jpg" alt="Purple urchins infestation" style="width:600px;height:400px;">
 
 </body>
 </html>
