--- a/page3.html
+++ b/page3.html
@@ -3,12 +3,18 @@
 <head>
 <title>We the Sea Otters</title>
 </head>
+<body style="background-color: #EDF2FB;">
+
 <body>
 
 <h1>You saved the kelp forst!.</h1>
-<p>This is a paragraph.</p>
- <a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
- <img src="images/seaotter1.jpg" alt="Sea Otter waving">
+<p>You ate away all of the sea urchins, keeping the kelp alive and retaining balance in the ocean!</p>
+<hr>
+<br>
+ <a href="page4.html">I must remain at my post.</a>
+ <br>
+ <br>
+ <img src="images/seaotter6.jpg" alt="Sea Otter cheering" style="width:700px;height:400px;">
 
 </body>
 </html>
