--- a/page4.html
+++ b/page4.html
@@ -3,12 +3,16 @@
 <head>
 <title>We the Sea Otters</title>
 </head>
+<body style="background-color: #EDF2FB;">
+
 <body>
 
 <h1>Where do you sleep for the night?</h1>
-<p>This is a paragraph.</p>
- <a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
- <img src="images/seaotter1.jpg" alt="Sea Otter waving">
+<p>How will this affect your job in any way?</p>
+<hr>
+<br>
+ <a href="page6.html"><img src="images/kelpforest1.jpg" alt="kelp forest" style="width:600px;height:400px;"></a>
+ <a href="page5.html"><img src="images/coralreef1.jpg" alt="coral reef" style="width:600px;height:400px;"></a>
 
 </body>
 </html>
