--- a/page5.html
+++ b/page5.html
@@ -3,12 +3,18 @@
 <head>
 <title>We the Sea Otters</title>
 </head>
+<body style="background-color: #EDF2FB;">
+
 <body>
 
 <h1>Oh no! You floated away from your home.</h1>
-<p>This is a paragraph.</p>
- <a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
- <img src="images/seaotter1.jpg" alt="Sea Otter waving">
+<p>You did not anchor yourself to anything and the waves carried you out at sea.</p>
+<hr>
+<br>
+ <a href="page4.html">Swim back!</a>
+ <br>
+ <br>
+ <img src="images/ocean1.jpg" alt="Open ocean waters">
 
 </body>
 </html>
