--- a/page6.html
+++ b/page6.html
@@ -3,12 +3,18 @@
 <head>
 <title>We the Sea Otters</title>
 </head>
+<body style="background-color: #EDF2FB;">
+
 <body>
 
 <h1>You're well rested!</h1>
-<p>This is a paragraph.</p>
- <a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
- <img src="images/seaotter1.jpg" alt="Sea Otter waving">
+<p>You wrapped yourself in some strands of kelp and was anchored down.</p>
+<hr>
+<br>
+ <a href="page7.html">Here is your reward for your hard work!</a>
+ <br>
+ <br>
+ <img src="images/seaotter2.jpg" alt="Sea Otter sleeping">
 
 </body>
 </html>
