--- a/page3.html
+++ b/page3.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<h1>You saved the kelp forst!.</h1>
+<h1>You saved the kelp forst!</h1>
 <p>You ate away all of the sea urchins, keeping the kelp alive and retaining balance in the ocean!</p>
 <hr>
 <br>
